# tftograph

./: README.md  README.rst  pyproject.toml
src/: tftograph.py
tests/: test_tftograph.py
tftograph/: tftograph.py
