[tool.poetry]
name = "tftograph"
version = "0.1.0"
description = "Convert from keras model to pb graph file"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tensorflow = "^2.7.0"
numpy = "^1.22.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tftograph = 'src.tftograph:main'